--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <html>
-    <head>test</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <title>test</title>
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <p>Hello World!</p>
+    </body>
 </html>
