--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <title>test</title>
+        <title>Welcome!</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>Hello World!!!!!!!!!!!!!!!!!</p>
+        <nav>
+            <li>
+                <a href ="reflection.html">Reflection</a>
+            </li>
+            <li>
+                <a href ="accessibility.html">Accessibility</a>
+            </li>
+            <li>
+                <a href ="topical-information.html">Topical Information</a>
+            </li>
+            <li>
+                <a href ="fun.html">Fun</a>
+            </li>
+        </nav>
     </body>
 </html>
